<resources>
    <string name="app_name">AppChat</string>

    <string name="label_chat_home">Chat</string>
    <string name="label_group">Group</string>
    <string name="label_friends">Friends</string>
    <string name="label_settings">Settings</string>

    <string name="title_login">Sign In to continue!</string>
    <string name="title_welcome">Welcome,</string>

    <string name="title_sign_up">Sign Up to get started!</string>
    <string name="title_welcome_sign_up">Create Account,</string>

    <string name="msg_hint_email">Email</string>
    <string name="msg_hint_password">Password</string>
    <string name="msg_hint_confirm_password">Confirm password</string>


    <string name="title_login_button">Login</string>
    <string name="title_sign_up_button">Create Account</string>

    <string name="msg_login_description">"I'm a new user, "</string>
    <string name="msg_login_description_route">Sign up</string>

    <string name="msg_sign_up_description">"I'm ready a member, "</string>
    <string name="msg_sign_up_description_route">Sign in</string>

    <string name="facebook_app_id">3372377532841706</string>
    <string name="fb_login_protocol_scheme">fb3372377532841706</string>
    <string name="label_sign_in_button">Sign In with Google</string>

    <string name="msg_email_invalid">Invalid email format</string>
    <string name="msg_password_invalid">Invalid password format</string>
    <string name="msg_confirm_password_unmatched">Those passwords didn\'t match. Try again!</string>
    <string name="title_hint_search">Search…</string>
    <string name="title_chat_messages">Messages</string>

    <plurals name="last_message_chat_id">
        <item quantity="other">%1$s_recent_message</item>
    </plurals>
    <string name="msg_compose_hint">Write a message...</string>

</resources>
