<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.SignUpActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back_24">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/dp_16"
            android:text="@string/title_welcome_sign_up" />
    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        android:id="@+id/textViewSubtitleSignUp"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:text="@string/title_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarSignUp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageViewProfilePick"
        android:layout_width="@dimen/dp_128"
        android:layout_height="@dimen/dp_128"
        android:background="@color/colorIndigoPrimary"
        app:layout_constraintBottom_toTopOf="@id/flowInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSubtitleSignUp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
        app:strokeWidth="@dimen/dp_2" />

    <ImageView
        android:layout_width="@dimen/dp_64"
        android:layout_height="@dimen/dp_64"
        android:src="@drawable/ic_photo_camera_24"
        app:layout_constraintBottom_toBottomOf="@id/imageViewProfilePick"
        app:layout_constraintEnd_toEndOf="@id/imageViewProfilePick"
        app:layout_constraintStart_toStartOf="@+id/imageViewProfilePick"
        app:layout_constraintTop_toTopOf="@id/imageViewProfilePick"
        app:tint="@android:color/darker_gray"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flowInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:orientation="vertical"
        app:constraint_referenced_ids="textInputLayoutEmail,
        textInputLayoutPassword, textInputLayoutConfirmPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSubtitleSignUp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        style="@style/Widget.Demo.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/msg_hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        style="@style/Widget.Demo.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/msg_hint_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutConfirmPassword"
        style="@style/Widget.Demo.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/msg_hint_confirm_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButtonLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:backgroundTint="@color/colorPinkPrimary"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/title_sign_up_button"
        android:textColor="@android:color/black"
        app:cornerRadius="@dimen/dp_8"
        app:layout_constraintEnd_toEndOf="@+id/flowInput"
        app:layout_constraintStart_toStartOf="@+id/flowInput"
        app:layout_constraintTop_toBottomOf="@id/flowInput"
        app:strokeWidth="@dimen/dp_1" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flowDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        app:constraint_referenced_ids="textViewDescription, textViewDescriptionRoute"
        app:flow_horizontalStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewDescription"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_sign_up_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewDescriptionRoute"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/msg_sign_up_description_route"
        android:textColor="@color/colorRedDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/textViewDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>
