<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


        <variable
            name="signInViewModel"
            type="com.sunasterisk.appchat.ui.auth.signin.SignInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        showError="@{signInViewModel.isError()}"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.signin.SignInFragment">

        <com.airbnb.lottie.LottieAnimationView
            isVisible="@{signInViewModel.isLoading()}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/flowInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSubtitleSignIn"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/anim_loading" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flowInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:orientation="vertical"
            app:constraint_referenced_ids="textInputLayoutEmailLogin, textInputLayoutPasswordLogin"
            app:layout_constraintBottom_toTopOf="@id/flowDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flowDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            app:constraint_referenced_ids="textViewDescription, textViewSignUpRoute"
            app:flow_horizontalStyle="packed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewWelcome"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:text="@string/title_welcome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewSubtitleSignIn"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:text="@string/title_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewWelcome" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmailLogin"
            style="@style/Widget.Demo.TextInputLayout"
            onEmailError="@{signInViewModel.emailLiveData}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/msg_hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:text="@={signInViewModel.emailLiveData}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPasswordLogin"
            style="@style/Widget.Demo.TextInputLayout"
            onPasswordError="@{signInViewModel.passwordLiveData}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/msg_hint_password"
                android:inputType="textPassword"
                android:text="@={signInViewModel.passwordLiveData}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButtonLogin"
            inputEmail="@{inputEditTextEmail}"
            inputPassword="@{inputEditTextPassword}"
            isVisible="@{!signInViewModel.isLoading()}"
            onListenerLogin="@{signInViewModel.listenerLogin}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:backgroundTint="@color/colorPinkPrimary"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/title_login_button"
            android:textColor="@android:color/black"
            app:cornerRadius="@dimen/dp_8"
            app:layout_constraintEnd_toEndOf="@+id/flowInput"
            app:layout_constraintStart_toStartOf="@+id/flowInput"
            app:layout_constraintTop_toBottomOf="@id/flowInput"
            app:strokeWidth="@dimen/dp_1" />

        <com.shobhitpuri.custombuttons.GoogleSignInButton
            android:id="@+id/signInButtonGoogle"
            isVisible="@{!signInViewModel.isLoading()}"
            onListenerGoogleSignIn="@{signInViewModel.listenerGoogleSignIn}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:backgroundTint="@color/colorIndigoPrimary"
            android:backgroundTintMode="multiply"
            android:text="@string/label_sign_in_button"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/flowInput"
            app:layout_constraintStart_toStartOf="@+id/flowInput"
            app:layout_constraintTop_toBottomOf="@id/materialButtonLogin" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/loginButtonFacebook"
            style="@style/FacebookLoginButtonStyle"
            isVisible="@{!signInViewModel.isLoading()}"
            listenerFacebookLogin="@{signInViewModel.listenerFacebookLogin}"
            registerCallback="@{signInViewModel.callbackFacebookManager}"
            readPermissions="@{signInViewModel.permissionLiveData}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:backgroundTint="@color/colorBlueDark"
            app:layout_constraintEnd_toEndOf="@+id/flowInput"
            app:layout_constraintStart_toStartOf="@+id/flowInput"
            app:layout_constraintTop_toBottomOf="@id/signInButtonGoogle" />

        <TextView
            android:id="@+id/textViewDescription"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_login_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewSignUpRoute"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/msg_login_description_route"
            android:textColor="@color/colorRedDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/textViewDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
